# Metis

./: .env.example  .gitignore  .pre-commit-config.yaml  EXAMPLE_Dashboard_LLM_Input.md  LICENSE  MANIFEST.in  PACKAGE_USAGE.md  README.md  alembic.ini  asml_clean.json  asml_final_fixed.json  asml_final_test.json  asml_fully_fixed.json  asml_rank_fixed.json  asml_report.json  asml_report_final.json  asml_report_fixed.json  asml_report_test.json  asml_report_v2.json  asml_report_v3.json  asml_report_v4.json  asml_rounded.json  asml_test_gpt5.json  asml_with_fixes.json  asml_with_methodology.json  asml_with_peer_rationale.json  asml_with_qoq_labels.json  asml_with_rationale.json  check_api_fields.py  debug_ktb.py  debug_peer_discovery.py  debug_screener_data.py  generate_competitive_report.py  generate_mo_swing_trading_report.py  pyproject.toml  report_ccl.html  test_competitive_dashboard.py  test_dashboard_cib.json  test_end_to_end_report.py  test_executive_summary_aapl.json  (+18 more)
.github/: copilot-instructions.md
config/: client_config.yaml
docs/: CHECKPOINT_Web_Search_Implementation.md  END_TO_END_PIPELINE_COMPLETE.md  LLM_WEB_SEARCH.md  PLAN_Task_1_3_Unified_Report_Schema_Design.md  PLAN_Task_2_Competitive_Dashboard_Implementation.md  RFC-001-competitive-intelligence-reports.md  RFC-001-implementation-plan.md  SUBTASK_1_3_2_Pydantic_Model_Implementation.md  competitive_intelligence_schema.json  schema_documentation.md
migrations/: env.py
migrations/competitive_intelligence/: 20251022_143000_create_competitive_intelligence_tables.py  __init__.py
prompts/comparative_analysis/: competitive_dashboard.txt
prompts/competitive_analysis/: analyst_consensus.txt  benchmark_analysis.txt  hidden_strengths.txt
prompts/linguistic_analysis/: competitor_messaging.txt
prompts/narrative_generation/: executive_summary.txt
prompts/sentiment_analysis/: sentiment_validation.txt
prompts/swing_trading/: swing_trader_analysis_prompt_template.txt
prompts/validation/: business_logic_validation.txt  narrative_consistency_check.txt
prompts/valuation_analysis/: fair_value_calculation.txt  market_perception_explanation.txt  valuation_gap_decomposition.txt
src/metis/: __init__.py
src/metis/api/: __init__.py  client.py  functions.py
src/metis/assistants/: generic_llm_agent.py  peer_discovery_service.py
src/metis/cli/: __init__.py  main.py
src/metis/core/: __init__.py  config.py
src/metis/data_collecting/: __init__.py  analyst_grades_collector.py  competitive_data_collector.py  dashboard_ranker.py  fmp_client.py  input_model_transformer.py
src/metis/models/: database.py  report_schema.py  report_schema_v2.py  validation_models.py
src/metis/orchestrators/: competitive_intelligence_orchestrator.py  report_generator.py  report_generator.py.bak
src/metis/prompts/company_research/: company_profile_web_search.txt
src/metis/prompts/comparative_analysis/: competitive_dashboard.txt
src/metis/prompts/competitive_analysis/: analyst_consensus.txt  hidden_strengths.txt  outlier_detection.txt  peer_comparison_analysis.txt
src/metis/prompts/narrative_generation/: actionable_recommendations.txt  competitor_messaging_analysis.txt  hidden_strengths_identification.txt
src/metis/prompts/recommendations/: actionable_roadmap.txt
src/metis/prompts/sentiment_analysis/: analyst_confusion_analysis.txt  management_sentiment_analysis.txt
src/metis/prompts/validation/: data_quality_assessment.txt
src/metis/prompts/valuation_analysis/: fair_value_calculation.txt  market_perception_explanation.txt
src/metis/reports/: __init__.py  report_builder.py  report_builder_v2.py
src/metis/swing_trading/: __init__.py  models.py  prompt_generator.py  signal_extractor.py  swing_trader_analyzer.py
src/metis/utils/: metric_calculations.py  prompt_loader.py  schema_validator.py  schema_validator_v2.py  schema_validator_v2_simple.py
tests/: conftest.py  test_basic.py  test_competitive_intelligence_orchestrator.py  test_peer_discovery_service.py  test_prompt_loader.py  test_prompt_loader_comprehensive.py  test_report_builder_comprehensive.py  test_report_schema.py  test_report_schema_comprehensive.py  test_schema_validator_comprehensive.py
